fix(fe): add web dependencies

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -36,6 +36,11 @@
       href="https://unpkg.com/maplibre-gl@^4.3/dist/maplibre-gl.css"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.js"></script>
+    <link
+      href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script src="flutter_bootstrap.js" async></script>
